<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/root"
    tools:context=".activities.StorageActivity">


<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <Button
        android:id="@+id/btnChoose"
        android:text="@string/choose"
        android:layout_weight="1"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        tools:ignore="ButtonStyle" />

    <Button
        android:id="@+id/btnUpload"
        android:text="@string/upload"
        android:layout_weight="1"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        tools:ignore="ButtonStyle" />

</LinearLayout>

    <Button
        android:id="@+id/goToDownload"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="118dp"
        android:text="@string/go_to_download" />

    <Button
        android:id="@+id/sign_out_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/goToDownload"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="32dp"
        android:text="@string/action_sign_out_short" />

    <Button
        android:id="@+id/add_donation_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/sign_out_button"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="41dp"
        android:text="@string/add_donation" />

    <Button
        android:id="@+id/list_donation_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/add_donation_button"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="17dp"
        android:text="@string/list_donations" />
    <!--
    <ImageView
        android:id="@+id/imgView"
        android:layout_width="match_parent"
        android:layout_height="match_parent" /> -->

</RelativeLayout>
